creacion gitignore e instalacion de moment

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/BlasDarkseid/BlasDarkseid/issues"
   },
-  "homepage": "https://github.com/BlasDarkseid/BlasDarkseid#readme"
+  "homepage": "https://github.com/BlasDarkseid/BlasDarkseid#readme",
+  "dependencies": {
+    "moment": "^2.29.1"
+  }
 }
